[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/Tiles/Water/water.shader" type="Shader" id=3]
[ext_resource path="res://src/Tiles/Water/Water.gd" type="Script" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/blue_tint = Color( 0, 0.670588, 1, 1 )
shader_param/sprite_scale = Vector2( 4, 4 )
shader_param/scale_x = 1.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31, 31 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[node name="Water" type="KinematicBody2D"]
z_index = 3
z_as_relative = false
collision_layer = 16
collision_mask = 0
script = ExtResource( 5 )
_floating = true
_static = true

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0.397217, 0 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 1 )

[node name="BodyCollision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="PlayerDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
modulate = Color( 0.101961, 0.0509804, 0.0509804, 0.905882 )
shape = SubResource( 3 )
[connection signal="body_entered" from="PlayerDetector" to="." method="_player_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_player_exit"]
